--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8e0f3cf0",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "083abadc",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eecad0ca",
    "metadata": {},
    "outputs": [
@@ -174,11 +174,55 @@
     "else:\n",
     "    print(\"No se puede rechazar la hipotesis Nula\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b6b7a792",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La STD de Fertilizante 1 es 0.6324555320336759\n",
+      "La STD de Fertilizante 2 es 0.7483314773547882\n",
+      "La STD de Fertilizante 3 es 0.7483314773547882\n"
+     ]
+    }
+   ],
+   "source": [
+    "## revisión de desviación estándar\n",
+    "import numpy as np\n",
+    "\n",
+    "print(f\"La STD de Fertilizante 1 es {np.std(fertilizante1)}\")\n",
+    "print(f\"La STD de Fertilizante 2 es {np.std(fertilizante2)}\")\n",
+    "print(f\"La STD de Fertilizante 3 es {np.std(fertilizante3)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ab85585",
+   "metadata": {},
+   "source": [
+    "## Conclusión:\n",
+    "Se rechaza la hipotesis nula (todos los valores de la columna Reject fueron True), lo que indica que hay diferencias significativas\n",
+    "entre los fertilizantes en cuanto a su efecto en el crecimiento de las plantas.\n",
+    "\n",
+    "Por la relación de diferencias de medias podemos conseguir que el F2 es tiene media mayor al F1 y el F3 a su vez, tiene una media mayor que F1 y F2. Por lo que F3 tiene los mejores resultados en terminos de haber conseguido mas maiz promedio en las parselas que se uso. \n",
+    "\n",
+    "Con un estudio posterior se conseguió que el Fertilizante 1 es el que obtuvo los resultados mas uniformes en las parcelas, al tener una desviacion estandar menor. Pero los Fertilizantes 2 y 3 a pesar de ser igualmente menos uniformes con respecto al Fertilizante 1, su desviación estandar demostro que siguen obteniendo tambien resultados muy uniformes al variar menos de 1 kg en promedio de todos sus resultados con respecto a la media. \n",
+    "\n",
+    "Por lo que la recomendación de uso de fertilizantes debe ser el tercero: Mejores resultados (media mas alta) y resultados uniformes (diferencia de 0.12 kg de STD al fertilizante mas uniforme, el cual tiene una media 3.2 kg menor)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
